compiler/flux_parser/src/grammar/item/snapshots/flux_parser__grammar__item__function__tests__no_name.snap
---
source: compiler/flux_parser/src/grammar/item/function.rs
expression: s
---
Root@0..7
  FnDecl@0..7
    Visibility@0..0
    Fn@0..2 "fn"
    Whitespace@2..3 " "
    Name@3..3
      Poisoned@3..3
    ParamList@3..5
      LParen@3..4 "("
      RParen@4..5 ")"
    FnReturnType@5..5
    BlockExpr@5..7
      LBrace@5..6 "{"
      RBrace@6..7 "}"


Errors:
[E0002] Error: expected syntax not found
   ,-[fn:1:4]
   |
 1 | fn (){}
   |    |  
   |    `-- expected name in function declaration
---'

